<resources>
    <string name="app_name">Quiz Game</string>
    <string name="splash_image">Splash Image</string>
    <string name="account">Don\'t have an account yet? <font color="#5b39c6"><b><u><i>Sign Up</i></u></b></font></string>
    <string name="forgot_password"><u>I forgot my password</u></string>
    <string name="or">OR</string>
    <string name="sign_in">Sign In</string>
    <string name="login_image">Login Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup_image">Signup Image</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="reset_my_password">Reset My Password</string>
    <string name="forgot_image">Forgot Image</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="request_id_token">604355569489-bq7a30facl6nkt4ipbsp4id2l2bd1hho.apps.googleusercontent.com</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="time">Time: </string>
    <string name="correct_answer">Correct Answer: </string>
    <string name="wrong_answer">Wrong Answer: </string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="congratulations_image">Congratulations Image</string>
    <string name="play_again">Play Again</string>
    <string name="exit">Exit</string>
</resources>