<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_500"
    tools:context=".ResultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_congratulations"
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/congratulations_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/congratulations" />

        <TextView
            android:id="@+id/tv_correct_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/correct_answer"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_score_correct"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_congratulations" />

        <TextView
            android:id="@+id/tv_score_correct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_correct_answer"
            app:layout_constraintTop_toBottomOf="@+id/image_congratulations"
            tools:text="0" />

        <TextView
            android:id="@+id/tv_wrong_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/wrong_answer"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_score_wrong"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_correct_answer" />

        <TextView
            android:id="@+id/tv_score_wrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_wrong_answer"
            app:layout_constraintTop_toBottomOf="@+id/tv_score_correct"
            tools:text="0" />

        <Button
            android:id="@+id/btn_play_again"
            android:layout_width="151dp"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            android:text="@string/play_again"
            android:textColor="@color/orange_500"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_exit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_wrong_answer" />

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="151dp"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            android:text="@string/exit"
            android:textColor="@color/orange_500"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_play_again"
            app:layout_constraintTop_toBottomOf="@+id/tv_score_wrong" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>